# OIerFinder

./: .gitignore  .gitmodules  README.md  app.py  calculate_stats.py  contest.py  create_db.py  finder_engine.py  format_lgawards.py  gemini-note.md  generate_data.py  luogu2yml.py  luogu_crawler.py  luogu_parser.py  luogu_top1000.py  luogu_user.txt  main.py  oier.py  oierfinder.py  pyproject.toml  record.py  requirements.txt  sample_conditions.yaml  sample_config.yml  sample_lgawards.txt  sample_luogu_awards.txt  school.py  test_db.py  update_cloudflare.py  util.py
.github/workflows/: build.yml  nightly.yml
cloudflare/migrations/: 0001_create_luogu_prizes_table.sql
cloudflare/script/: check_foreign_keys.py  cleardatabase  create_indexes.py  finder_engine_d1_test.py  test.py  test_d1_query.py  upload_to_d1.py
cloudflare/worker/: filter_stats.json  index.html  package-lock.json  package.json  vite.config.js  wrangler.toml
cloudflare/worker/api/: contest_stats.json  get_luogu_prizes.js  index.js  luogu_to_query.js  query_oier.js
cloudflare/worker/src/: App.jsx  index.css  main.jsx
cloudflare/worker/src/api/: client.js
cloudflare/worker/src/components/: JsonQuery.jsx  LuoguQuery.jsx  QueryBuilder.jsx  RecordFilter.jsx  ResultsDisplay.jsx
static/css/: style.css
templates/: base.html  find_oiers.html  format_lgawards.html  format_results.html  index.html  results.html
utils/: luogu_crawl.py
